--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>RayTrace</title>
 </head>
 <body>
-    <canvas id="RayTrace" width="600" height="600"></canvas>
+    <canvas id="RayTrace" width="600" height="600" style="border: 1px grey solid"></canvas>
     <script type="module" src="main.js"></script>
     <!-- <script>
         var c = document.getElementById("RayTrace");
