--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
      </style>
 </head>
 <body>
-    <h1>Welcome to Lee's CPU Raytracing</h1>
+    <h1>Welcome to Lee's CPU Resterize</h1>
     <p>Resterize 방식의 Computer Graphic을 CPU로 작동하게 작성하였습니다.</p>
     <p>Camera로부터 Viewport 그리고 Canvas까지 구현하여 각 Pixel들을 CPU가 직접 계산합니다.</p>
     <p>Vertex -> Model, World, Camera, NDC 까지의 회전, 이동행렬을 계산하며</p>
